# CVFS

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
include/: CVFS.h  ht.h  jht.h
src/: CVFS.c  CVFS_.c  defines.h  ht.h
test/: console.c  console.h  ht.h  main.c  test.c  test.h
